--- a/index.html
+++ b/index.html
@@ -1,10 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
-    <meta charset="UTF-8" />
-    <title>crap-portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfólio - Bruno Sousa</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background: #222;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+    }
+    nav a {
+      margin: 0 10px;
+      color: #fff;
+      text-decoration: none;
+    }
+    section {
+      padding: 40px;
+      max-width: 900px;
+      margin: auto;
+    }
+    h2 {
+      color: #222;
+    }
+    .skills span {
+      display: inline-block;
+      background: #ddd;
+      margin: 5px;
+      padding: 8px 12px;
+      border-radius: 4px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #222;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-    
+  <header>
+    <h1>Bruno Sousa</h1>
+    <p>Engenharia Biomédica | Investigador em IA e Ciência de Dados</p>
+    <nav>
+      <a href="#sobre">Sobre</a>
+      <a href="#formacao">Formação</a>
+      <a href="#skills">Competências</a>
+      <a href="#contactos">Contactos</a>
+    </nav>
+  </header>
+
+  <section id="sobre">
+    <h2>Sobre Mim</h2>
+    <p>
+      Sou um investigador dedicado em Engenharia Biomédica, com experiência no desenvolvimento
+      de soluções de software para áreas médicas e científicas. Tenho interesse em Inteligência
+      Artificial, Bioengenharia e Ciência de Dados, e gosto de colaborar em equipas multidisciplinares
+      para resolver problemas complexos.
+    </p>
+  </section>
+
+  <section id="formacao">
+    <h2>Formação Académica</h2>
+    <ul>
+      <li><strong>Mestrado em Engenharia Biomédica</strong> – Universidade de Aveiro (2023 - Presente)</li>
+      <li><strong>Licenciatura em Engenharia Biomédica</strong> – Universidade de Aveiro (2020 - 2023)</li>
+      <li><strong>Ensino Secundário</strong> – Escola Básica e Secundária de Ourém (2017 - 2020)</li>
+    </ul>
+  </section>
+
+  <section id="skills">
+    <h2>Competências</h2>
+    <div class="skills">
+      <span>Python</span>
+      <span>Matlab</span>
+      <span>R</span>
+      <span>SPSS</span>
+      <span>Excel</span>
+      <span>IA & Machine Learning</span>
+      <span>Data Science</span>
+      <span>Comunicação</span>
+      <span>Trabalho em equipa</span>
+    </div>
+  </section>
+
+  <section id="contactos">
+    <h2>Contactos</h2>
+    <p><strong>Email:</strong> officialsbruno@gmail.com</p>
+    <p><strong>Telefone:</strong> +351 932 962 739</p>
+    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/brunosousa04" target="_blank">linkedin.com/in/brunosousa04</a></p>
+  </section>
+
+  <footer>
+    <p>© 2024 Bruno Sousa - Portfólio</p>
+  </footer>
 </body>
 </html>
